# keyword-notifier

./: Cargo.toml  Dockerfile  README.md  fetch.sh  runAll.sh
.github/workflows/: docker-publish.yml  rust-clippy.yml
fetcher-stackoverflow/: Cargo.toml
fetcher-stackoverflow/src/: main.rs
fetcher-twitter/: Cargo.toml
fetcher-twitter/src/: main.rs
src/: main.rs
src/config/: mod.rs
src/fetcher/: base.rs  mod.rs  stackoverflow.rs  twitter.rs
src/routes/: root.rs
src/tracing/: mod.rs
templates/: base.html  error.html  index.html  item.html
tracing/: Cargo.toml
tracing/src/: lib.rs
web/: Cargo.toml
web/src/: main.rs
web/templates/: error.html  index.html
