[package]
name = "keyword-notifier"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
envy = "0.4"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2", features = ["add-extension", "trace"] }
async-std = "1.10.0"
