[package]
name = "tracing"
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
envy = "0.4.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics", "serialize"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["reqwest_collector_client", "rt-tokio"]}
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics"] }
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio_tracing = { package = "tracing", version = "0.1.29" }
tracing-attributes = "0.1.18"
tracing-fmt = "0.1.1"
tracing-opentelemetry = "0.17.2"
tracing-serde = "0.1.2"
tracing-subscriber = { version = "0.3.7", features = ["fmt", "json", "env-filter"]}
tracing-timing = "0.5.0"
tonic = "*"
# tracing-tree = "0.2.0"
