[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
axum = "0.5"
envy = "0.4"
mysql = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }